[package]
authors = ["osmosis-contributors"]
description = "Utilities for writing Osmosis' smart account authenticators with CosmWasm"
edition = "2021"
license = "MIT"
name = "cw-authenticator"
version = "1.0.0"

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.4" }
sha2 = "0.10.8"

[dev-dependencies]
serde_json = "1.0.114"

[package.metadata]
documentation = "https://docs.rs/cw_authenticator"
repository = "https://github.com/osmosis-labs/cw-authenticator"
